--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -30,8 +30,10 @@
             <div class="hidden-print"><place>Navigation</place></div>
         </div>
         <div class="col-lg-10">
+            <div class="pull-right">
+                <layout>Control:Search</layout>
+            </div>
             <place>Sidebar</place>
-            <hr/>
             <place>Content</place>
         </div>
     </div>
