--- a/src/Assets/Control/Pills/RUD.html
+++ b/src/Assets/Control/Pills/RUD.html
@@ -1,14 +1,22 @@
-<div class="nav nav-pills">
+<ul class="nav nav-pills">
     <li>
-        <a href="/control/<call>Entity</call>/Touch/<k>ID</k>"><i class="icon glyphicon glyphicon-refresh"></i></a>
+        <a href="/control/<call>Entity</call>/Touch/<k>ID</k>"
+           data-toggle="tooltip" title="Обновить">
+            <i class="icon glyphicon glyphicon-refresh"></i></a>
     </li>
     <li>
-        <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><i class="icon glyphicon glyphicon-eye-open"></i></a>
+        <a href="/control/<call>Entity</call>/Show/<k>ID</k>"
+           data-toggle="tooltip" title="Просмотреть">
+            <i class="icon glyphicon glyphicon-eye-open"></i></a>
     </li>
     <li>
-        <a href="/control/<call>Entity</call>/Update/<k>ID</k>"><i class="icon glyphicon glyphicon-pencil"></i></a>
+        <a href="/control/<call>Entity</call>/Update/<k>ID</k>"
+                data-toggle="tooltip" title="Редактировать">
+            <i class="icon glyphicon glyphicon-pencil"></i></a>
     </li>
     <li>
-        <a href="/control/<call>Entity</call>/Delete/<k>ID</k>"><i class="icon glyphicon glyphicon-trash"></i></a>
+        <a href="/control/<call>Entity</call>/Delete/<k>ID</k>"
+                data-toggle="tooltip" title="Удалить">
+            <i class="icon glyphicon glyphicon-trash"></i></a>
     </li>
-</div>
+</ul>
