--- a/src/Assets/User/Control/Show/Short.html
+++ b/src/Assets/User/Control/Show/Short.html
@@ -1,12 +1,8 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <k>ID</k>. <k>Fullname</k>
+<li class="list-group-item">
+    <div class="pull-right">
+        <layout>Control:Pills/RUD</layout>
     </div>
-    <div class="panel-body">
-        <div class="pull-right">
-            <layout>Control:Pills/RUD</layout>
-        </div>
-        <div>EMail: <a href="mailto:<k>EMail</k>"><k>EMail</k></a></div>
-        <div><datetime><k>Created</k></datetime></div>
-    </div>
-</div>
+    <h4><k>Fullname</k></h4>
+    <div>EMail: <a href="mailto:<k>EMail</k>"><k>EMail</k></a></div>
+    <div><datetime><k>Created</k></datetime></div>
+</li>
