--- a/src/Assets/Comment/Control/Show/Short.html
+++ b/src/Assets/Comment/Control/Show/Short.html
@@ -11,6 +11,7 @@
         </cut>
     </div>
     <div class="panel-footer">
+        <layout>Mixins:Antispam</layout>
             <div class='pull-right'><datetime><k>Created</k></datetime></div>
         <entity>User:<k>User</k></entity> на <entity><k>Entity</k>:<k>Object</k></entity>
     </div>
