--- a/src/Assets/IO/Control/Storages.html
+++ b/src/Assets/IO/Control/Storages.html
@@ -1,3 +1,12 @@
 <table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Название</th>
+            <th>Драйвер</th>
+            <th>URL</th>
+            <th>Объём</th>
+            <th>Статус</th>
+        </tr>
+    </thead>
     <place>Content</place>
 </table>
