--- a/src/Assets/Project/Frontpage.html
+++ b/src/Assets/Project/Frontpage.html
@@ -1,6 +1,4 @@
-<breadcrumb href="/">Главная</breadcrumb>
-<subtitle>Главная</subtitle>
 <div class="jumbotron">
-    <h1>Codeine <call>Version.Codeine.Major</call></h1>
-    <h2><call>Host</call></h2>
+    <h2>Codeine <call>Version.Codeine.Major</call> успешно установлен</h2>
+    <h3><call>Host</call></h3>
 </div>
