--- a/src/Assets/Project/Zone.html
+++ b/src/Assets/Project/Zone.html
@@ -19,6 +19,7 @@
         </div>
         <div class="clearfix"></div>
     </nav>
+    <breadcrumbs/>
 
     <div id="content" role="main">
         <place>Content</place>
