--- a/src/Assets/Server/Control/Do.html
+++ b/src/Assets/Server/Control/Do.html
@@ -1,8 +1,20 @@
-<h3><l>Server.Control:System</l></h3>
-<pre>
-    <place>System</place>
-</pre>
-<h3><l>Server.Control:CPU</l></h3>
-<pre>
-    <place>CPU</place>
-</pre>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <l>Server.Control:System</l>
+    </div>
+    <div class="panel-body">
+        <place>System</place>
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <l>Server.Control:CPU</l>
+        <div class="badge"><call>CPU.Count</call></div>
+    </div>
+    <div class="panel-body">
+        <ul class="nav nav-pills">
+            <place>CPU</place>
+        </ul>
+    </div>
+</div>
