--- a/src/Assets/Session/Control/Table.html
+++ b/src/Assets/Session/Control/Table.html
@@ -1,10 +1,12 @@
 <table class="table table-condensed table-striped">
-    <tr>
-        <th><l>Session.Entity:Created</l></th>
-        <th><l>Session.Entity:Expire</l></th>
-        <th><l>Session.Entity:IP</l></th>
-        <th><l>Session.Entity:User</l></th>
-        <th><l>Session.Control:Actions</l></th>
-    </tr>
+    <thead>
+        <tr>
+            <th><l>Session.Entity:Created</l></th>
+            <th><l>Session.Entity:Expire</l></th>
+            <th><l>Session.Entity:IP</l></th>
+            <th><l>Session.Entity:User</l></th>
+            <th><l>Session.Control:Actions</l></th>
+        </tr>
+    </thead>
     <place>Content</place>
 </table>
