--- a/src/Assets/User/Activation/Needed.html
+++ b/src/Assets/User/Activation/Needed.html
@@ -1,20 +1,19 @@
 <subtitle>Необходима активация</subtitle>
 <breadcrumb href="/activation/needed">Необходима активация</breadcrumb>
 
-<h2 class="page-header">Вы успешно прошли первый этап регистрации.</h2>
-
-<div class="row">
-    <div class="col-md-6">
-        <div class="spaced">
-            На ящик <strong><k>EMail</k></strong> выслано письмо с инструкциями. <br/>
-            Пожалуйста, проследуйте по указанной в письме ссылке, в течении 24 часов для активации вашего аккаунта.
-        </div>
+<div class="panel panel-success">
+    <div class="panel-heading">
+        Вы успешно прошли первый этап регистрации.
     </div>
+    <div class="panel-body">
+        На ящик <strong><k>EMail</k></strong> выслано письмо с инструкциями. <br/>
+        Пожалуйста, проследуйте по указанной в письме ссылке, в течении 24 часов для активации вашего аккаунта.
 
-    <div class="col-md-6">
-        <img src="http://<k>Server</k>/favicon.ico" width="16" height="16"/> <a class="header3" href="http://<k>Server</k>">Перейти
-        на <k>Server</k></a><br/>
+    </div>
+    <div class="panel-footer">
+        <a class="btn btn-default" href="http://<k>Server</k>">
+        <img src="http://<k>Server</k>/favicon.ico" width="16" height="16"/> Перейти на <k>Server</k></a>
 
-        <a class="header3" href="/mail/user/<k>ID</k>">Выслать активационный код еще раз</a>
+        <a class="btn btn-default" href="/mail/user/<k>ID</k>">Выслать активационный код еще раз</a>
     </div>
 </div>
