--- a/src/Assets/User/Control/Show/Full.html
+++ b/src/Assets/User/Control/Show/Full.html
@@ -20,7 +20,6 @@
                 </h2>
                 <h4>
                     <k>Location</k>
-                    ,
                     <entity>Country:<k>Country</k></entity>
                 </h4>
             </div>
@@ -66,7 +65,7 @@
             <l>User.Entity:Avatar</l>
         </th>
         <td>
-            <k>Avatar</k>
+            <file>User/Photo/<k>Avatar</k></file>
         </td>
     </tr>
 </table>
