--- a/src/Assets/User/Create.html
+++ b/src/Assets/User/Create.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<subtitle>Регистрация</subtitle>
+<breadcrumb href="/join">Регистрация</breadcrumb>
+<place>Content</place>
