--- a/src/Assets/User/Show/Cabinet.app.html
+++ b/src/Assets/User/Show/Cabinet.app.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-nav pull-right">
+<ul class="nav navbar-nav navbar-right">
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <k>Fullname</k>
