--- a/src/Assets/bootstrap3/Widgets/Form.html
+++ b/src/Assets/bootstrap3/Widgets/Form.html
@@ -1,19 +1,16 @@
 <form role="form" method="post" action="<k>Action</k>" enctype="multipart/form-data" autocomplete="on">
-    <div class="panel panel-default">
-        <block>
-            <div class="panel-heading">
-                <k>Title</k>
-            </div>
-        </block>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <header/>
+        </div>
         <div class="panel-body">
             <input type="hidden" name="BackURL" value="<k>BackURL</k>" />
             <place>Form</place>
         </div>
         <div class="panel-footer">
-            <button type="submit" class="btn btn-large btn-success">
+            <button type="submit" class="btn btn-lg btn-primary">
                 <l><k>Entity</k>.Control:Options.<k>Purpose</k></l>
             </button>
-            <a class="btn btn-default" href="<k>BackURL</k>">Назад</a>
         </div>
     </div>
 </form>
