--- a/src/Assets/Comment/Object.html
+++ b/src/Assets/Comment/Object.html
@@ -8,7 +8,7 @@
     <Method>Do</Method>
     <Call>
         <Entity><call>Where.Entity</call></Entity>
-        <Object><k>Object</k></Object>
+        <Where><call>Where.Object</call></Where>
         <Template>Short</Template>
     </Call>
 </exec>
