--- a/src/Assets/Comment/Show/Full.html
+++ b/src/Assets/Comment/Show/Full.html
@@ -5,7 +5,7 @@
     <Service>Entity.Show.Static</Service>
     <Method>Do</Method>
     <Call>
-        <Entity><k>Entity</k></Entity>
+        <Entity><k>Type</k></Entity>
         <Where><k>Object</k></Where>
         <Template>Short</Template>
     </Call>
