--- a/src/Assets/User/Show/Full.html
+++ b/src/Assets/User/Show/Full.html
@@ -1,6 +1,3 @@
-<subtitle>Пользователи</subtitle>
-<breadcrumb href="/users">Пользователи</breadcrumb>
-
 <subtitle><k>Fullname</k></subtitle>
 <breadcrumb href="/user/<k>ID</k>"><k>Fullname</k></breadcrumb>
 
@@ -38,7 +35,7 @@
                         <td>
                             <datetime><k>Created</k></datetime>
                             <small class="pull-right">
-                                <datetime engine="Period" format="2"><k>Created</k></datetime> назад
+                                <datetime engine="Period" format="2"><k>Created</k></datetime>
                             </small>
                         </td>
                     </tr>
