--- a/src/Assets/bootstrap3/Widgets/Form/Radio.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Radio.html
@@ -1,6 +1,8 @@
-<label class="radio-inline">
-    <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>
-        checked="<k>Checked</k>"
-    </block>>
-    <k>Label</k>
-</label>
+<div class="<k>RadioClass</k>">
+    <label class="radio-inline">
+        <input type="radio" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>
+            checked="<k>Checked</k>"
+        </block>>
+        <k>Label</k>
+    </label>
+</div>
