--- a/src/Assets/Entity/Billing/NotEnough.html
+++ b/src/Assets/Entity/Billing/NotEnough.html
@@ -2,10 +2,10 @@
     <div class="panel-heading">
         <span class="glyphicon glyphicon-shopping-cart"></span> Платное действие
         <div class="pull-right">
-            Баланс после оплаты: <call>Balance.New</call> <call>Currency</call>
+            Баланс после оплаты: <call>Balance.New</call> <call>Project.Currency</call>
         </div>
     </div>
     <div class="panel-body text-danger">
-        Для выполнения действия требуется <call>Cost</call> <call>Currency</call>
+        Для выполнения действия требуется <call>Cost</call> <call>Project.Currency</call>
     </div>
 </div>
