--- a/src/Assets/Entity/Billing/Paid.html
+++ b/src/Assets/Entity/Billing/Paid.html
@@ -2,11 +2,11 @@
     <div class="panel-heading">
         <span class="glyphicon glyphicon-shopping-cart"></span> Платное действие
         <div class="pull-right">
-            Баланс после оплаты: <call>Balance.New</call> <call>Currency</call>
+            Баланс после оплаты: <call>Balance.New</call> <call>Project.Currency</call>
         </div>
     </div>
     <div class="panel-body">
-        Оплачено <call>Cost</call> <call>Currency</call>
+        Оплачено <call>Cost</call> <call>Project.Currency</call>
     </div>
 </div>
 
