--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -5,7 +5,7 @@
 
 <subtitle><l><call>Bundle</call>.Control:Title</l></subtitle>
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-danger" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
               <span class="sr-only">Навигация</span>
