--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,14 +1,15 @@
-<div class="topbar nav nav-pills nav-stacked">
-    <li>
-        <a href="/control/<call>Entity</call>/Touch/<k>ID</k>"><i class="glyphicon glyphicon-refresh"></i></a>
-    </li>
-    <li>
-        <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><i class="glyphicon glyphicon-eye-open"></i></a>
-    </li>
-    <li>
-        <a href="/control/<call>Entity</call>/Update/<k>ID</k>"><i class="glyphicon glyphicon-pencil"></i></a>
-    </li>
-    <li>
-        <a href="/control/<call>Entity</call>/Delete/<k>ID</k>"><i class="glyphicon glyphicon-trash"></i></a>
-    </li>
+<div class="topbar btn-group-vertical btn-group-sm">
+    <a class="btn btn-default"
+       href="/control/<call>Entity</call>/Touch/<k>ID</k>">
+        <i class="icon glyphicon glyphicon-refresh" data-toggle="tooltip" title="Обновить"></i>
+    </a>
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Show/<k>ID</k>">
+        <i class="icon glyphicon glyphicon-eye-open" data-toggle="tooltip" title="Просмотреть"></i>
+    </a>
+    <a class="btn btn-default" href="/control/<call>Entity</call>/Update/<k>ID</k>">
+        <i class="icon glyphicon glyphicon-pencil" data-toggle="tooltip" title="Редактировать"></i>
+    </a>
+    <a class="btn btn-danger" href="/control/<call>Entity</call>/Delete/<k>ID</k>">
+        <i class="icon glyphicon glyphicon-trash" data-toggle="tooltip" title="Удалить"></i>
+    </a>
 </div>
