--- a/src/Assets/Country/Control/Table.html
+++ b/src/Assets/Country/Control/Table.html
@@ -1,13 +1,15 @@
 <table class="table table-striped">
-    <tr>
-        <th>
-            <l><call>Entity</call>.Entity:Title</l>
-            <a href="<call>URL</call>?sort=Title"> &uarr;</a>
-            <a href="<call>URL</call>?rsort=Title">&darr;</a>
-        </th>
-        <th>
+    <thead>
+        <tr>
+            <th>
+                <l><call>Entity</call>.Entity:Title</l>
+                <a href="<call>URL</call>?sort=Title"> &uarr;</a>
+                <a href="<call>URL</call>?rsort=Title">&darr;</a>
+            </th>
+            <th>
 
-        </th>
-    </tr>
+            </th>
+        </tr>
+    </thead>
     <place>Content</place>
 </table>
