--- a/src/Assets/Complain/Control/Show/Short.html
+++ b/src/Assets/Complain/Control/Show/Short.html
@@ -1,17 +1,8 @@
-<tr>
-    <td>
-        <datetime><k>Created</k></datetime>
-    </td>
-    <td>
-        <entity>User:<k>User</k></entity>
-    </td>
-    <td>
-        <entity><k>Type</k>:<k>Object</k></entity>
-    </td>
-    <td>
-        <div class="label label-warning"><k>Rule</k></div>
-    </td>
-    <td>
+<li class="list-group-item">
+    <div class="pull-right">
         <layout>Control:Pills/RUD</layout>
-    </td>
-</tr>
+    </div>
+    <h4><entity>User:<k>User</k></entity> на <entity><k>Type</k>:<k>Object</k></entity></h4>
+    <div class="pull-right label label-warning"><k>Rule</k></div>
+    <datetime><k>Created</k></datetime>
+</li>
