--- a/src/Assets/Complain/Control/Table.html
+++ b/src/Assets/Complain/Control/Table.html
@@ -1,12 +1,3 @@
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th><l>Complain.Entity:Created</l></th>
-            <th><l>Complain.Entity:User</l></th>
-            <th><l>Complain.Entity:Object</l></th>
-            <th><l>Complain.Entity:Rule</l></th>
-            <th></th>
-        </tr>
-    </thead>
+<ul class="list-group">
     <place>Content</place>
-</table>
+</ul>
