--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -2,8 +2,15 @@
 <subtitle><l>Control.Panel:Title</l></subtitle>
 
 <breadcrumb href="/control/<call>Bundle</call>"><l><call>Bundle</call>.Control:Title</l></breadcrumb>
+<breadcrumb href="/control/<call>Bundle</call>/<call>Option</call>">
+    <l><call>Bundle</call>.Control:Options.<call>Option</call></l>
+</breadcrumb>
+
 
 <subtitle><l><call>Bundle</call>.Control:Title</l></subtitle>
+
+<subtitle><l><call>Bundle</call>.Control:Options.<call>Option</call></l></subtitle>
+
 
 <nav class="navbar navbar-danger" role="navigation">
         <div class="navbar-header">
