--- a/src/Assets/Country/Control/Show/Short.html
+++ b/src/Assets/Country/Control/Show/Short.html
@@ -1,8 +1,6 @@
-<tr class="Status<k>Status</k>">
-    <td>
-        <a href="/country/<k>Slug</k>"><k>Title</k></a>
-    </td>
-    <td>
-        <div class="pull-right"><layout>Control.Pills:RUD</layout></div>
-    </td>
-</tr>
+<li class="list-group-item">
+    <div class="pull-right">
+        <layout>Control:Pills/RUD</layout>
+    </div>
+    <h4><k>Title</k></h4>
+</li>
