--- a/src/Assets/Country/Control/Table.html
+++ b/src/Assets/Country/Control/Table.html
@@ -1,15 +1,3 @@
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>
-                <l><call>Entity</call>.Entity:Title</l>
-                <a href="<call>URL</call>?sort=Title"> &uarr;</a>
-                <a href="<call>URL</call>?rsort=Title">&darr;</a>
-            </th>
-            <th>
-
-            </th>
-        </tr>
-    </thead>
+<ul class="list-group">
     <place>Content</place>
-</table>
+</ul>
