--- a/src/Assets/Mixins/Antispam.html
+++ b/src/Assets/Mixins/Antispam.html
@@ -1,7 +1,9 @@
-<if value="<k>isSpam</k>" eq="0">
-    <span class="glyphicon glyphicon-check" data-toggle="tooltip" title="Не спам"></span>
-</if>
-<if value="<k>isSpam</k>" eq="1">
-    <span class="glyphicon glyphicon-ban-circle" data-toggle="tooltip" title="Спам"></span>
-</if>
-<span class="label label-default" data-toggle="tooltip" title="Жалоб"><k>Complains</k></span>
+<span class="label label-default">
+    <if value="<k>isSpam</k>" eq="0">
+        <span class="glyphicon glyphicon-check" data-toggle="tooltip" title="Не спам"></span>
+    </if>
+    <if value="<k>isSpam</k>" eq="1">
+        <span class="glyphicon glyphicon-ban-circle" data-toggle="tooltip" title="Спам"></span>
+    </if>
+    <k>Complains</k> жалоб.
+</span>
