--- a/src/Assets/Project/OpenSearch.html
+++ b/src/Assets/Project/OpenSearch.html
@@ -1,1 +1,4 @@
-<link rel="search" type="application/opensearchdescription+xml" href="<call>Host</call>/opensearch.xml" title="Поиск по <call>Project.Title</call>" />
+<link rel="search"
+      type="application/opensearchdescription+xml"
+      href="<call>Host</call>/opensearch.xml"
+      title="Поиск по <call>Project.Title</call>" />
