--- a/src/Assets/bootstrap3/Widgets/Form/Datepicker.html
+++ b/src/Assets/bootstrap3/Widgets/Form/Datepicker.html
@@ -2,7 +2,7 @@
 <css>bootstrap-datepicker</css>
 
 <div class="form-group">
-    <label for="<k>Name</k>"><l><k>Label</k></l></label>
+    <label for="<k>Name</k>"><l><k>Label</k></l>:</label>
 
        <div class="input-append date">
           <input id="<k>Name</k>" name="<k>Name</k>" class="form-control datepicker" size="16" type="text" value="<k>Value</k>" id="<k>ID</k>" <block>required="<k>Required</k>"</block> />
