--- a/src/Assets/Control/Pills/Top.html
+++ b/src/Assets/Control/Pills/Top.html
@@ -1,4 +1,8 @@
-<div class="topbar btn-group-vertical btn-group-sm">
+<div class="topbar btn-group-vertical btn-group-lg">
+    <a class="btn btn-primary"
+       href="/control/<call>Entity</call>">
+        <i class="icon glyphicon glyphicon-wrench" data-toggle="tooltip" title="ЦУП"></i>
+    </a>
     <a class="btn btn-default"
        href="/control/<call>Entity</call>/Touch/<k>ID</k>">
         <i class="icon glyphicon glyphicon-refresh" data-toggle="tooltip" title="Обновить"></i>
