--- a/src/Assets/bootstrap3/Widgets/Navlist/Element.html
+++ b/src/Assets/bootstrap3/Widgets/Navlist/Element.html
@@ -6,7 +6,7 @@
                 <Where><k>ID</k>.png</Where>
             </Source>
             <Width>16</Width>
-            <Default>Default:application.png</Default>
+            <Default>Default:img/application.png</Default>
             <Class>img</Class>
         </image>
         <k>Title</k>
